BUG:  overlap bug

--- a/chess_application/chess-helper/src/static/scss/style.scss
+++ b/chess_application/chess-helper/src/static/scss/style.scss
@@ -179,5 +179,5 @@ body {
 
 .dragged {
   // background: yellow;
-  z-index: 10;
+  z-index: 100;
 }
